--- a/PRAK_WEB_02/about.html
+++ b/PRAK_WEB_02/about.html
@@ -10,6 +10,15 @@
             color:whitesmoke ;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;
         }
+        h4{
+            text-align: center;
+        }
+        p{
+            text-align: center;
+        }
+        ul{
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -21,31 +30,31 @@
         <a href="catalog.html">Catalog</a>
         <a href="contact.html">Contact</a>
     <h2 style="text-align: center;">About Us</h2>
-    <p style="text-align: center;">
+    <p>
         Kami sudah berdiri sejak 2014, tetapi di tahun-tahun sebelumnya, tepatnya ditahun 2012, kami bukan menjual sepatu, melainkan makanan 10.000-an.
         Selama 2 tahun usaha kami jatuh bangun. Kami memutuskan untuk mengganti produk makanan menjadi sepatu. Setelah menjual sepatu selama 3
         tahun, usaha kami pun membuahkan hasil. Kami membuka cabang pertama kami di Malang, tepatnya di Jl. Mayjend Panjaitan No.3, Malang, Indonesia.
         Tidak berselang lama, kami pun membuka cabang yang kedua di tahun 2019, tepatnya di Jl. Malioboro No.113, Yogyakarta, Indonesia Dan tahun ini 
         kami baru membuka cabang ketiga, tepatnya di Jl.Cibaduyut Raya No.7, Bandung, Jawa Barat, Indonesia.
     </p>  
-    <p style="text-align: center;">
+    <p>
         Di toko kami tidak menjual item-item gradeori apalagi kw. Kami hanya menjual item-item berkualitas super. Dan di toko kami semua item pasti 
         100% original. Jika tidak original garansi uang 100% kembali, karena motto kami yaitu "Kepuasan pelanggan adalah proiritas kami". Dan toko kami 
         bukan hanya menjual sepatu berbagai macam merek. Kami juga menjual berbagai macam fashion seperti hoodie, t-shirt, kaos kaki. Kami juga menawarkan jasa shoes treatment.
     </p>
-    <h4 style="text-align: center;">Opening Hours Store</h4>
-    <p style="text-align: center;">7:00 AM - 5:00 PM</p>
-    <h4 style="text-align:center;">Kunjungi Toko Kami :</h4>
-    <ul style="text-align: center;">
+    <h4>Opening Hours Store</h4>
+    <p>7:00 AM - 5:00 PM</p>
+    <h4>Kunjungi Toko Kami :</h4>
+    <ul>
         Jl. Plampitan No.14, Semarang, Indonesia
     </ul>
-    <ul style="text-align: center;">
+    <ul>
         Jl. Mayjend Panjaitan No.3, Malang, Indonesia
     </ul>
-    <ul style="text-align: center;">
+    <ul>
         Jl. Malioboro No.113, Yogyakarta, Indonesia
     </ul>
-    <ul style="text-align: center;">
+    <ul>
         Jl.Cibaduyut Raya No.7, Bandung, Jawa Barat, Indonesia
     </ul>
     <h4>Our Service :</h4>
