--- a/PRAK_WEB_02/catalog.html
+++ b/PRAK_WEB_02/catalog.html
@@ -10,20 +10,24 @@
             color:whitesmoke ;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         }
+        table{
+            border: whitesmoke;
+            border-style: hidden;
+        }
+        p{
+            text-align: center;
+        }
     </style>
 </head>
 <body>
     <h1 style="text-align: center;">SELAMAT DATANG DI NOERS FOOTWEAR</h1>
-    <p style="text-align: center;">Jl. Plampitan No.14, Semarang, Indonesia</p>
+    <p>Jl. Plampitan No.14, Semarang, Indonesia</p>
     <hr> 
         <a href="home.html">Home</a>
         <a href="about.html">Our Store</a>  
         <a href="catalog.html">Catalog</a> 
         <a href="contact.html">Contact</a>
-    <center><table cellpadding="5" style="text-align: center;" style="border-style: groove;">
-        <tr>
-            <thead>Catalog</thead>
-        </tr>
+        <table style="margin-left: auto;margin-right: auto;">
         <tr>
             <td>Produk</td>
             <td>Deskripsi Produk</td>
@@ -91,8 +95,7 @@
             <td>IDR 1.499K</td>
         </tr>
     </table>
-    </center>
-        <p style="text-align: center;">*note : barang update setiap hari</p>
-        <p style="text-align: center;">*barang tidak dapat dipesan melalui web ini</p>
-        <p style="text-align: center;">*barang hanya dapat dipesan melalui <a href="contact.html">whatsapp</a></p>    
+        <p>*note : barang update setiap hari</p>
+        <p>*barang tidak dapat dipesan melalui web ini</p>
+        <p>*barang hanya dapat dipesan melalui <a href="contact.html">whatsapp</a></p>    
     
