--- a/PRAK_WEB_02/contact.html
+++ b/PRAK_WEB_02/contact.html
@@ -10,6 +10,12 @@
             color:whitesmoke ;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;
         }
+        h5{
+          text-align: center;
+        }
+        p{
+          text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -22,16 +28,16 @@
         <a href="contact.html">Contact</a>
     
     <h3 style="text-align: center;">Contact Info</h3>
-    <h5 style="text-align: center;">Kunjungi Toko Kami</h5>
-    <p style="text-align: center;">Jl. Plampitan No.14, Semarang, Indonesia</p>
-    <h5 style="text-align: center;">Whatsapp</h5>
-    <p style="text-align: center;">+62 8896 5466 1326</p>
-    <h5 style="text-align: center;">Instagram</h5>
-    <p style="text-align: center;">@noersfootwear</p>
-    <h5 style="text-align: center;">Email</h5>
-    <p style="text-align: center;">noersfootwear@gmail.com</p>
-    <h5 style="text-align: center;">Fax</h5>
-    <p style="text-align: center;">+62 851 333 777</p>
+    <h5>Kunjungi Toko Kami</h5>
+    <p>Jl. Plampitan No.14, Semarang, Indonesia</p>
+    <h5>Whatsapp</h5>
+    <p>+62 8896 5466 1326</p>
+    <h5>Instagram</h5>
+    <p>@noersfootwear</p>
+    <h5>Email</h5>
+    <p>noersfootwear@gmail.com</p>
+    <h5>Fax</h5>
+    <p>+62 851 333 777</p>
 
             <form class="form-horizontal">
                 <fieldset>
